--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -1,5 +1,7 @@
 <div class="card">
   <h3><a href="{{ include.page }}">{{ include.title }}</a></h3>
   <p class="tags">{{ include.tags }}</p>
-  <p><a href="{{ include.repo }}">GitHub Repo</a> · <a href="{{ include.page }}">Case Study</a></p>
+  <p><a class="btn" href="{{ include.repo }}">GitHub Repo</a>
+    <a class="btn" href="{{ include.page }}" style="margin-left:.5rem">Case Study</a>
+  </p>
 </div>
